--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,12 @@
 
   <body>
     <%= yield %>
+
+    <footer>
+      <hr>
+      <p>Платформа для создания и прохождения тестов.</p>
+      <p>Учебный проект в онлайн-школе <a href='https://thinknetica.com/' target='blank'>Thinknetica</a></p>
+      <p><%= year %>, Nikolenko Artem, <%= github_url('kopo4eweb', 'test-guru') %></p>
+    </footer>
   </body>
 </html>
