--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,15 +1,7 @@
 <p><b>Test</b>: <%= @test.title %></p>
 
 <ol>
-<% @test.questions.each do |question| %>
-  <li>
-    <%= question.body %> | 
-    <%= link_to 'Edit', edit_question_path(question) %> |
-    <%= link_to 'Destroy', question_path(question),
-      method: :delete,
-      data: { confirm: 'Are you sure?' } %>
-  </li>
-<% end %>
+  <%= render @test.questions %>
 </ol>
 
 <%= link_to 'Create question', new_test_question_path(@test) %> | 
