--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,6 @@
 <li>
-  <%= question.body %> | 
+  <%= question.body %><br>
+  <%= link_to 'Show', question %> |
   <%= link_to 'Edit', edit_question_path(question) %> |
   <%= link_to 'Destroy', question_path(question),
     method: :delete,
