--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,7 +1,15 @@
 <tr>
   <td><%= test.id %></td>
   <td><%= test.title %></td>
-  <td><%= test.level %></td>
+  <td><%= test_level(test) %></td>
   <td><%= test.questions.size %></td>
   <td><%= link_to 'Show', test %></td>
+  <td><%= link_to 'Edit', edit_test_path(test) %></td>
+  <td>
+    <%= link_to 'Delete', 
+      test,
+      method: 'delete',
+      data: { confirm: 'Are you sure?' } %>
+  </td>
+  <td><%= button_to 'Start', start_test_path(test) %></td>
 </tr>
