--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -2,6 +2,8 @@
 
 <p><b><%= @test_passage.current_question.body %></b></p>
 
+<p><%= @test_passage.passed_questions %> \ <%= @test_passage.test.questions.count %></p>
+
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
   <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :title, include_hidden: false do |b| %>
     <p>
