--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,7 +1,7 @@
 <h1>The <%= @test_passage.test.title %> Test was Completed!</h1>
 
 <p>
-<% if @test_passage.percent_success_answer >= 85 %>
+<% if @test_passage.success? %>
   <span class='test-success'>Test passed successfully with <b><%= @test_passage.percent_success_answer %>%</b></span>
 <% else %>
   <span class='test-fail'>Test failed with <b><%= @test_passage.percent_success_answer %>%</b></span>
