--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,18 +16,20 @@
           <%= link_to 'TestGuru', root_path, class: 'nav__logo' %>
 
           <ul class="nav__list">
-            <% if logged_in? %>
-              <li class="nav__item">Welcome, <b><%= current_user.name %></b> Guru</li>
-              <li class="nav__item"><%= link_to 'Logout', logout_path %></li>
+            <% if user_signed_in? %>
+              <li class="nav__item">Welcome, <b><%= current_user.email %></b> Guru</li>
+              <li class="nav__item"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
             <% else %>
-              <li class="nav__item"><%= link_to 'Login', login_path %></li>
-              <li class="nav__item"><%= link_to 'Signup', signup_path %></li>
+              <li class="nav__item"><%= link_to 'Login', new_user_session_path %></li>
+              <li class="nav__item"><%= link_to 'Signup', new_user_registration_path %></li>
             <% end %>
           </ul>
         </div>
       </nav>
 
       <div class="container">
+        <%= output_flash %>
+
         <%= yield %>
       </div>
 
