--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,11 +3,20 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-      /* Email styles need to be inline */
+      .mailbox {
+        width: 70%;
+        margin: 0 auto;
+        margin-top: 25px;
+        padding: 10px;
+        border: 3px solid #3c85e0;
+        border-radius: 5px;
+      }
     </style>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="mailbox">
+      <%= yield %>
+    </div>
   </body>
 </html>
