--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,12 +1,15 @@
 <h1>List tests</h1>
 
+<p><%= link_to 'Add test', new_admin_test_path %></p>
+
 <table>
   <thead>
     <tr>
+      <th>id</th>
       <th>Title</th>
       <th>Level</th>
       <th>Questions</th>
-      <th>Actions</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
   <tbody>
