--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -10,4 +10,4 @@
   <%= render @question.answers %>
 </ol>
 
-<%= link_to 'Back', test_path(@question.test) %>
+<%= link_to 'Back', admin_test_path(@question.test) %>
