--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,12 +1,12 @@
-<h1>List tests</h1>
+<h1><%= t('.header') %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Level</th>
-      <th>Questions</th>
-      <th>Actions</th>
+      <th><%= t('.title') %></th>
+      <th><%= t('.level') %></th>
+      <th><%= t('.questions') %></th>
+      <th><%= t('.actions') %></th>
     </tr>
   </thead>
   <tbody>
