--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,9 +1,9 @@
 <li>
   <%= answer.title %><br>
-  <%= link_to 'Show', admin_answer_path(answer) %> |
-  <%= link_to 'Edit', edit_admin_answer_path(answer) %> |
-  <%= link_to 'Delete', 
+  <%= link_to t('.link_show'), admin_answer_path(answer) %> |
+  <%= link_to t('.link_edit'), edit_admin_answer_path(answer) %> |
+  <%= link_to t('.link_delete'), 
       admin_answer_path(answer),
       method: 'delete',
-      data: { confirm: 'Are you sure?' } %>
+      data: { confirm: t('.confirm_delete') } %>
 </li>
