--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Edit Answer</h1>
+<h1><%= t('.header') %></h1>
 
 <p><%= @answer.question.body %></p>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('.link_back'), admin_question_path(@answer.question) %>
