--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,15 +1,15 @@
-<h1>Question</h1>
+<h1><%= t('.header') %></h1>
 
 <p><%= @answer.question.body %></p>
 
 <p>
-  <b>Answer:</b>
+  <b><%= t('.answer') %>:</b>
   <%= @answer.title %>
 </p>
 
 <p>
-  <b>Correct:</b>
+  <b><%= t('.correct') %>:</b>
   <%= @answer.correct %>
 </p>
 
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('.link_back'), admin_question_path(@answer.question) %>
