--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_test_path(@question.test) %>
+<%= link_to t('.link_back'), admin_test_path(@question.test) %>
