--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,15 +1,15 @@
-<h1>List tests</h1>
+<h1><%= t('.header') %></h1>
 
-<p><%= link_to 'Add test', new_admin_test_path %></p>
+<p><%= link_to t('.link_add'), new_admin_test_path %></p>
 
 <table>
   <thead>
     <tr>
       <th>id</th>
-      <th>Title</th>
-      <th>Level</th>
-      <th>Questions</th>
-      <th colspan="3">Actions</th>
+      <th><%= t('.title') %></th>
+      <th><%= t('.level') %></th>
+      <th><%= t('.questions') %></th>
+      <th colspan="3"><%= t('.actions') %></th>
     </tr>
   </thead>
   <tbody>
