--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Create new Test</h1>
+<h1><%= t('.header') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('.link_back'), admin_tests_path %>
