--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,7 +1,7 @@
 <% if resource.errors.present? %>
   <div id="error_explanation">
     <h2>
-      <%= pluralize(resource.errors.count, "error") %> detected:
+      <%= t('.header', count: resource.errors.count) %>
     </h2>
     <ul>
       <% resource.errors.full_messages.each do |msg| %>
