--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,11 +1,11 @@
-<h1>The <%= @test_passage.test.title %> Test was Completed!</h1>
+<h1><%= t('.header', title: @test_passage.test.title) %></h1>
 
 <p>
 <% if @test_passage.success? %>
-  <span class='test-success'>Test passed successfully with <b><%= @test_passage.percent_success_answer %>%</b></span>
+  <span class='test-success'><%= t('.success') %> <b><%= @test_passage.percent_success_answer %>%</b></span>
 <% else %>
-  <span class='test-fail'>Test failed with <b><%= @test_passage.percent_success_answer %>%</b></span>
+  <span class='test-fail'><%= t('.failed') %> <b><%= @test_passage.percent_success_answer %>%</b></span>
 <% end %>
 </p>
 
-<%= link_to 'Back to tests', tests_path %>
+<%= link_to t('.button_back'), tests_path %>
