--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Pass the <%= @test_passage.test.title %> Test</h1>
+<h1><%= t('.header', title: @test_passage.test.title) %></h1>
 
 <p><b><%= @test_passage.current_question.body %></b></p>
 
@@ -12,5 +12,5 @@
     </p>
   <% end %>
 
-  <p><%= form.submit 'Next' %></p>
+  <p><%= form.submit t('.button_next') %></p>
 <% end %>
