--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,6 +1,6 @@
-<tr>
+<tr scope="row">
   <td><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test.questions.size %></td>
-  <td><%= button_to t('.button_start'), start_test_path(test) %></td>
+  <td><%= button_to t('.button_start'), start_test_path(test), class: 'btn btn-outline-primary' %></td>
 </tr>
