--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,12 +1,12 @@
 <h1><%= t('.header') %></h1>
 
-<table>
-  <thead>
+<table class="table mt-4">
+  <thead class="thead-light">
     <tr>
-      <th><%= t('.title') %></th>
-      <th><%= t('.level') %></th>
-      <th><%= t('.questions') %></th>
-      <th><%= t('.actions') %></th>
+      <th scope="col"><%= t('.title') %></th>
+      <th scope="col"><%= t('.level') %></th>
+      <th scope="col"><%= t('.questions') %></th>
+      <th scope="col"><%= t('.actions') %></th>
     </tr>
   </thead>
   <tbody>
