--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,7 +1,11 @@
-<h1><%= t('.header') %></h1>
+<div class="row justify-content-center">
+  <div class="col">
+    <h2 class='mb-4'><%= t('.header') %></h2>
 
-<p><%= @answer.question.body %></p>
+    <p class='h4 mb-4'><%= @answer.question.body %></p>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to t('.link_back'), admin_question_path(@answer.question) %>
+    <%= link_to t('.link_back'), admin_question_path(@answer.question), class: 'btn btn-secondary mt-4', role: 'button' %>
+  </div>
+</div>
