--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,15 +1,20 @@
-<h1><%= t('.header') %></h1>
+<div class="row justify-content-center">
+  <div class="col">
+    <h2 class='mb-4'><%= t('.header') %></h2>
 
-<p><%= @answer.question.body %></p>
+    <p class="h4 mb-4"><%= @answer.question.body %></p>
+    <hr>
 
-<p>
-  <b><%= t('.answer') %>:</b>
-  <%= @answer.title %>
-</p>
+    <p>
+      <b><%= t('.answer') %>:</b>
+      <%= @answer.title %>
+    </p>
 
-<p>
-  <b><%= t('.correct') %>:</b>
-  <%= @answer.correct %>
-</p>
+    <p>
+      <b><%= t('.correct') %>:</b>
+      <%= @answer.correct %>
+    </p>
 
-<%= link_to t('.link_back'), admin_question_path(@answer.question) %>
+    <%= link_to t('.link_back'), admin_question_path(@answer.question), class: 'btn btn-secondary mt-4', role: 'button' %>
+  </div>
+</div>
