--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,11 +1,14 @@
-<%= form_with model: [:admin, @test, @question], local: true do |form| %>
-  <%= render 'shared/errors', resource: @question %>
+<div class="card">
+  <div class="card-body">
+    <%= form_with model: [:admin, @test, @question], local: true do |form| %>
+      <%= render 'shared/errors', resource: @question %>
 
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_field :body %>
-  </p>
-  <p>
-    <%= form.submit%>
-  </p>
-<% end %>
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_field :body, class: 'form-control' %>
+      </div>
+
+      <%= form.submit class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
