--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,8 +1,12 @@
-<li>
-  <%= question.body %><br>
-  <%= link_to t('.link_show'), admin_question_path(question) %> |
-  <%= link_to t('.link_edit'), edit_admin_question_path(question) %> |
-  <%= link_to t('.link_delete'), admin_question_path(question),
-    method: :delete,
-    data: { confirm: t('.confirm_delete') } %>
-</li>
+<tr scope="row">
+  <td><%= question.body %></td>
+  <td><%= link_to t('.link_show'), admin_question_path(question), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
+  <td><%= link_to t('.link_edit'), edit_admin_question_path(question), class: 'btn btn-outline-secondary btn-sm', role: 'button' %></td>
+  <td>
+    <%= link_to t('.link_delete'), admin_question_path(question),
+        method: :delete,
+        data: { confirm: t('.confirm_delete') },
+        class: 'btn btn-outline-danger btn-sm',
+        role: 'button' %>
+  </td>
+</tr>
