--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,13 +1,25 @@
-<h1><%= t('.header', title: @question.test.title) %></h1>
+<h1 class="mb-4"><%= t('.header', title: @question.test.title) %></h1>
 
-<p><%= @question.body %></p>
+<p class="h4 mb-4"><%= @question.body %></p>
+<hr>
 
-<h2><%= t('.answers') %></h2>
+<h2 class="mb-4"><%= t('.answers') %></h2>
 
-<%= link_to t('.link_create'), new_admin_question_answer_path(@question) %>
+<%= link_to t('.link_create'), new_admin_question_answer_path(@question), class: 'btn btn-primary', role: 'button' %>
 
-<ol>
-  <%= render @question.answers %>
-</ol>
+<table class="table table-striped mt-4">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col"><%= t('.title') %></th>
+      <th colspan="3" scope="col"><%= t('.actions') %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render @question.answers %>
+  </tbody>
+</table>
 
-<%= link_to t('.link_back'), admin_test_path(@question.test) %>
+<hr>
+<div class="mt-4">
+  <%= link_to t('.link_back'), admin_test_path(@question.test), class: 'btn btn-secondary', role: 'button' %>
+</div>
