--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,19 +1,25 @@
-<%= form_with model: [:admin, @test], local: true do |form| %>
-  <%= render 'shared/errors', resource: @test %>
+<div class="card">
+  <div class="card-body">
+    <%= form_with model: [:admin, @test], local: true do |form| %>
+      <%= render 'shared/errors', resource: @test %>
 
-  <p>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
-  </p>
-  <p>
-    <%= form.label :level %><br>
-    <%= form.text_field :level %>
-  </p>
-  <p>
-    <%= form.label :category_id %><br>
-    <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
-  </p>
-  <p>
-    <%= form.submit%>
-  </p>
-<% end %>
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :level %>
+        <%= form.text_field :level, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.label :category_id %>
+        <%= form.collection_select :category_id, Category.all, :id, :title, {prompt: true}, {class: 'form-control'} %>
+      </div>
+
+      <%= form.submit class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
+
