--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,14 +1,16 @@
-<tr>
+<tr scope="row">
   <td><%= test.id %></td>
   <td><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test.questions.size %></td>
-  <td><%= link_to t('.link_show'), admin_test_path(test) %></td>
-  <td><%= link_to t('.link_edit'), edit_admin_test_path(test) %></td>
+  <td><%= link_to t('.link_show'), admin_test_path(test), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
+  <td><%= link_to t('.link_edit'), edit_admin_test_path(test), class: 'btn btn-outline-secondary btn-sm', role: 'button' %></td>
   <td>
     <%= link_to t('.link_delete'), 
       admin_test_path(test),
       method: 'delete',
-      data: { confirm: t('.confirm_delete') } %>
+      data: { confirm: t('.confirm_delete') },
+      class: 'btn btn-outline-danger btn-sm',
+      role: 'button' %>
   </td>
 </tr>
