--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,15 +1,15 @@
-<h1><%= t('.header') %></h1>
+<h1 class="mb-4"><%= t('.header') %></h1>
 
-<p><%= link_to t('.link_add'), new_admin_test_path %></p>
+<p><%= link_to t('.link_add'), new_admin_test_path, class: 'btn btn-primary', role: 'button' %></p>
 
-<table>
-  <thead>
+<table class="table table-striped mt-4">
+  <thead class="thead-light">
     <tr>
-      <th>id</th>
-      <th><%= t('.title') %></th>
-      <th><%= t('.level') %></th>
-      <th><%= t('.questions') %></th>
-      <th colspan="3"><%= t('.actions') %></th>
+      <th scope="col">id</th>
+      <th scope="col"><%= t('.title') %></th>
+      <th scope="col"><%= t('.level') %></th>
+      <th scope="col"><%= t('.questions') %></th>
+      <th colspan="3" scope="col"><%= t('.actions') %></th>
     </tr>
   </thead>
   <tbody>
