--- a/app/views/admin/tests/new.html.erb
+++ b/app/views/admin/tests/new.html.erb
@@ -1,5 +1,9 @@
-<h1><%= t('.header') %></h1>
+<div class="row justify-content-center">
+  <div class="col col-sm-10 col-md-8 col-lg-5">
+    <h2 class='mb-4'><%= t('.header') %></h2>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to t('.link_back'), admin_tests_path %>
+    <%= link_to t('.link_back'), admin_tests_path, class: 'btn btn-secondary mt-4', role: 'button' %>
+  </div>
+</div>
