--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,12 +1,24 @@
-<p><b><%= t('.title') %></b>: <%= @test.title %></p>
-<p><b><%= t('.level') %></b>: <%= test_level(@test) %></p>
+<p class="h4 mb-2"><b><%= t('.title') %></b>: <%= @test.title %></p>
+<p class="h4"><b><%= t('.level') %></b>: <%= test_level(@test) %></p>
+<hr>
 
-<h2><%= t('.questions') %>:</h2>
-<%= link_to t('.link_create'), new_admin_test_question_path(@test) %>
+<h2 class="mb-4"><%= t('.questions') %>:</h2>
+<%= link_to t('.link_create'), new_admin_test_question_path(@test), class: 'btn btn-primary', role: 'button' %>
 
-<ol>
-  <%= render @test.questions %>
-</ol>
+<table class="table table-striped mt-4">
+  <thead class="thead-light">
+    <tr>
+      <th scope="col"><%= t('.title') %></th>
+      <th colspan="3" scope="col"><%= t('.actions') %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render @test.questions %>
+  </tbody>
+</table>
 
-<%= link_to t('.link_edit'), edit_admin_test_path(@test) %> | 
-<%= link_to t('.link_back'), admin_tests_path %>
+<hr>
+<div class="mt-4">
+  <%= link_to t('.link_edit'), edit_admin_test_path(@test), class: 'btn btn-outline-secondary mr-2', role: 'button' %>
+  <%= link_to t('.link_back'), admin_tests_path, class: 'btn btn-secondary', role: 'button' %>
+</div>
