--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,53 +1,62 @@
-<h2><%= t(".header") %></h2>
+<div class="row justify-content-center">
+  <div class="col col-sm-10 col-md-8 col-lg-5">
+    <h2 class='mb-4'><%= t('.header') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="card">
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "name" %>
+          <div class="form-group">
+            <%= f.label :first_name %>
+            <%= f.text_field :first_name, autofocus: true, autocomplete: "name", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name, autocomplete: "soname", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
+          </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div><%= t('.confirmable', email: resource.unconfirmed_email) %></div>
+          <% end %>
+
+          <div class="form-group">
+            <%= f.label :password %> <i><%= t('.password') %></i>
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control' %>
+            <% if @minimum_password_length %>              
+              <em><%= t('.min_password', length: @minimum_password_length) %></em>
+            <% end %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :current_password %> <i><%= t('.current_password_note') %></i>
+            <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
+          </div>
+
+          <%= f.submit t('.button_update'), class: 'btn btn-primary' %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="card mt-4">
+      <div class="card-body">
+        <h3 class="mb-4"><%= t('.cancel_title') %></h3>
+
+        <p><%= t('.unhappy') %> <%= button_to t('.button_cancel'), registration_path(resource_name), data: { confirm: t('.confirm_delete') }, method: :delete, class: 'btn btn-danger' %></p>
+      </div>
+    </div>
+
+    <%= link_to t('.link_back'), :back, class: 'btn btn-secondary mt-4' %>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autocomplete: "soname" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div><%= t('.confirmable', email: resource.unconfirmed_email) %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i><%= t('.password') %></i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= t('.min_password', length: @minimum_password_length) %></em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i><%= t('.current_password_note') %></i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit t('.button_update') %>
-  </div>
-<% end %>
-
-<h3><%= t('.cancel_title') %></h3>
-
-<p><%= t('.unhappy') %> <%= button_to t('.button_cancel'), registration_path(resource_name), data: { confirm: t('.confirm_delete') }, method: :delete %></p>
-
-<%= link_to t('.link_back'), :back %>
+</div>
