--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg <%= admin ? 'navbar-dark bg-dark' : 'navbar-light bg-light-blue' %>">
   <div class="container">
     <%= link_to 'TestGuru', root_path, class: 'navbar-brand' %>
-    <%= link_to_admin_palen('Admin Panel', 'btn btn-warning btn-sm') %>
+    <%= link_to_admin_panel %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
