--- a/app/views/admin/gists/_gist.html.erb
+++ b/app/views/admin/gists/_gist.html.erb
@@ -1,6 +1,6 @@
 <tr scope="row">
   <td><%= gist.id %></td>
-  <td><%= link_to gist.question.short_body, admin_question_path(gist.question), target: '_blank' %></td>
+  <td><%= link_to truncate(gist.question.body, lenght: 25), admin_question_path(gist.question), target: '_blank' %></td>
   <td><%= link_to gist.get_id, gist.url, target: '_blank' %></td>
   <td><%= gist.user.email %></td>
 </tr>
