--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,7 +6,11 @@
   <thead class="thead-light">
     <tr>
       <th scope="col">id</th>
-      <th scope="col"><%= t('.title') %></th>
+      <th scope="col" class="sort-by-title pointer">
+        <%= t('.title') %>
+        <%= octicon "arrow-up", class: "text-success hide" %>
+        <%= octicon "arrow-down", class: "text-success hide" %>
+      </th>
       <th scope="col"><%= t('.level') %></th>
       <th scope="col"><%= t('.questions') %></th>
       <th colspan="3" scope="col"><%= t('.actions') %></th>
