--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,6 +1,6 @@
 <tr scope="row">
   <td><%= test.id %></td>
-  <td><%= test.title %></td>
+  <td class='title'><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test.questions.size %></td>
   <td><%= link_to t('.link_show'), admin_test_path(test), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
