--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,5 +1,5 @@
 <tr scope="row">
-  <td><%= test.title %></td>
+  <td class='title'><%= test.title %></td>
   <td><%= test_level(test) %></td>
   <td><%= test.questions.size %></td>
   <td><%= button_to t('.button_start'), start_test_path(test), class: 'btn btn-outline-primary' %></td>
