--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -3,7 +3,11 @@
 <table class="table mt-4">
   <thead class="thead-light">
     <tr>
-      <th scope="col"><%= t('.title') %></th>
+      <th scope="col" class="sort-by-title pointer">
+        <%= t('.title') %>
+        <%= octicon "arrow-up", class: "text-success hide" %>
+        <%= octicon "arrow-down", class: "text-success hide" %>
+      </th>
       <th scope="col"><%= t('.level') %></th>
       <th scope="col"><%= t('.questions') %></th>
       <th scope="col"><%= t('.actions') %></th>
