--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,16 +1,25 @@
 <tr scope="row">
-  <td><%= test.id %></td>
-  <td class='title'><%= test.title %></td>
-  <td><%= test_level(test) %></td>
-  <td><%= test.questions.size %></td>
-  <td><%= link_to t('.link_show'), admin_test_path(test), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
-  <td><%= link_to t('.link_edit'), edit_admin_test_path(test), class: 'btn btn-outline-secondary btn-sm', role: 'button' %></td>
-  <td>
+  <td class='align-middle'><%= test.id %></td>
+  <td class='align-middle title'>
+    <%= content_tag :span, test.title, class: 'test-title', data: { test_id: test.id } %>
+    <%= render 'form_inline', test: test == @test ? @test : test %>
+    </td>
+  <td class='align-middle'><%= test_level(test) %></td>
+  <td class='align-middle'><%= test.questions.size %></td>
+  <td class='align-middle'><%= link_to t('.link_show'), admin_test_path(test), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
+  <td class='align-middle'>
+    <%= link_to t('.link_edit'), 
+                edit_admin_test_path(test),
+                data: { test_id: test.id, label_edit: t('.link_edit'), label_cancel: t('.link_cancel')},
+                class: 'btn btn-outline-secondary btn-sm form-inline-link', 
+                role: 'button' %>
+    </td>
+  <td class='align-middle'>
     <%= link_to t('.link_delete'), 
-      admin_test_path(test),
-      method: 'delete',
-      data: { confirm: t('.confirm_delete') },
-      class: 'btn btn-outline-danger btn-sm',
-      role: 'button' %>
+                admin_test_path(test),
+                method: 'delete',
+                data: { confirm: t('.confirm_delete') },
+                class: 'btn btn-outline-danger btn-sm',
+                role: 'button' %>
   </td>
 </tr>
