--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,12 +4,14 @@
   background-color: rgb(196, 236, 255);
 }
 
-.field_with_errors input{
+.field_with_errors input,
+.field_with_errors textarea {
   border-color:rgba(218, 32, 32, 0.4);
   box-shadow: 0 0 0.1rem 0.2rem rgba(218, 32, 32, 0.4);
 }
 
-.field_with_errors input:focus{
+.field_with_errors input:focus,
+.field_with_errors textarea:focus {
   border-color:rgba(218, 32, 32, 0.65);
   box-shadow: 0 0 0.1rem 0.2rem rgba(218, 32, 32, 0.65);
 }
