--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -4,6 +4,7 @@
     <%= content_tag :span, test.title, class: 'test-title', data: { test_id: test.id } %>
     <%= render 'form_inline', test: test == @test ? @test : test %>
     </td>
+  <td class='align-middle'><%= test_public(test) %></td>
   <td class='align-middle'><%= test_level(test) %></td>
   <td class='align-middle'><%= test.questions.size %></td>
   <td class='align-middle'><%= link_to t('.link_show'), admin_test_path(test), class: 'btn btn-outline-primary btn-sm', role: 'button' %></td>
