--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -9,6 +9,11 @@
       </div>
 
       <div class="form-group">
+        <%= form.check_box :public %>
+        <%= form.label :public %>
+      </div>
+
+      <div class="form-group">
         <%= form.label :level %>
         <%= form.text_field :level, class: 'form-control' %>
       </div>
