--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
 
   <body class="pb-5">
     
-      <%= render 'shared/nav', admin: true%>
+      <%= render 'shared/nav_admin'%>
 
       <div class="container mt-4">
         <%= output_flash %>
