--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     
-      <%= render 'shared/nav', admin: false %>
+      <%= render 'shared/nav' %>
 
       <div class="container mt-4">
         <%= output_flash %>
