--- a/app/views/shared/_nav_admin.html.erb
+++ b/app/views/shared/_nav_admin.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light-blue">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <%= link_to 'TestGuru', root_path, class: 'navbar-brand' %>
     <%= link_to_admin_panel %>
@@ -10,15 +10,18 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
         <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to t('nav.tests'), tests_path, class: 'nav-link mr-2' %></li>
-          <li class="nav-item"><%= link_to t('nav.badges_all'), badges_path, class: 'nav-link mr-2' %></li>
-          <li class="nav-item"><%= link_to t('nav.badges_user'), badges_user_path, class: 'nav-link mr-2' %></li>
-          <li class="nav-item"><span class="nav-link"><%= t('nav.welcome', user: current_user.first_name).html_safe %></span></li>
+          <li class="nav-item"><%= link_to t('nav.tests'), admin_tests_path, class: 'nav-link mr-2' %></li>
+          <li class="nav-item"><%= link_to t('nav.badges'), admin_badges_path, class: 'nav-link mr-2' %></li>
+          <li class="nav-item"><%= link_to t('nav.gists'), admin_gists_path, class: 'nav-link mr-2' %></li>
+
+          <li class="nav-item"><span class="nav-link"><%= t('nav.welcome_admin', user: current_user.first_name).html_safe %></span></li>
           <li class="nav-item"><%= link_to t('nav.profile'), edit_user_registration_path, class: 'nav-link mr-2' %></li>
           <li class="nav-item"><%= link_to t('nav.logout'), destroy_user_session_path, method: :delete, class: 'btn btn-outline-info', role: 'button' %></li>
-        <% else %>
+        <%# else %>
+        <!--
           <li class="nav-item"><%= link_to t('nav.login'), new_user_session_path, class: 'btn btn-outline-dark', role: 'button' %></li>
           <li class="nav-item"><%= link_to t('nav.signup'), new_user_registration_path, class: 'nav-link' %></li>
+        -->
         <% end %>
       </ul>
     </div>
