--- a/app/views/admin/badges/index.html.erb
+++ b/app/views/admin/badges/index.html.erb
@@ -13,6 +13,8 @@
         <%= octicon "arrow-up", class: "text-success hide" %>
         <%= octicon "arrow-down", class: "text-success hide" %>
       </th>
+      <th scope="col"><%= t('.active') %></th>
+      <th scope="col"><%= t('.usage_limit') %></th>
       <th scope="col"><%= t('.url') %></th>
       <th colspan="2" scope="col"><%= t('.actions') %></th>
     </tr>
