--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -13,6 +13,7 @@
         <%= octicon "arrow-up", class: "text-success hide" %>
         <%= octicon "arrow-down", class: "text-success hide" %>
       </th>
+      <th scope="col"><%= t('.category') %></th>
       <th scope="col"><%= t('.public') %></th>
       <th scope="col"><%= t('.level') %></th>
       <th scope="col"><%= t('.questions') %></th>
