--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -9,6 +9,7 @@
         <%= octicon "arrow-down", class: "text-success hide" %>
       </th>
       <th scope="col"><%= t('.level') %></th>
+      <th scope="col"><%= t('.category') %></th>
       <th scope="col"><%= t('.questions') %></th>
       <th scope="col"><%= t('.actions') %></th>
     </tr>
