--- a/app/views/admin/badges/edit.html.erb
+++ b/app/views/admin/badges/edit.html.erb
@@ -1,9 +1,13 @@
 <div class="row justify-content-center">
-  <div class="col col-sm-10 col-md-8 col-lg-5">
-    <h2 class='mb-4'><%= t('.header') %></h2>
+  <div class="col-12"><h2 class='mb-4'><%= t('.header') %></h2></div>
+  
+  <div class="col col-sm-12 col-md-8 col-lg-6">
 
     <%= render 'form' %>
 
     <%= link_to t('.link_back'), admin_badges_path, class: 'btn btn-secondary mt-4', role: 'button' %>
+  </div>
+    <div class="col col-sm-12 col-md-4 col-lg-6">
+    <%= render 'rules' %>
   </div>
 </div>
