--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,6 +1,7 @@
 <tr scope="row">
   <td class='title'><%= test.title %></td>
   <td><%= test_level(test) %></td>
+  <td><%= test_category(test) %></td>
   <td><%= test.questions.size %></td>
   <td><%= button_to t('.button_start'), start_test_path(test), class: 'btn btn-outline-primary' %></td>
 </tr>
