--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -14,6 +14,13 @@
       </div>
 
       <div class="form-group">
+        <%= form.label :time_for_test, for: :test_time_for_test_minuts %>        
+        <%= form.number_field :time_for_test_minuts, in: 0..720, class: 'form-control time_for_test_minuts' %>
+        <%= form.hidden_field :time_for_test, class: 'time_for_test_seconds' %>
+        <small class="form-text text-muted"><%= t('.notice_time_for_test') %></small>
+      </div>
+
+      <div class="form-group">
         <%= form.label :level %>
         <%= form.text_field :level, class: 'form-control' %>
       </div>
