--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -7,17 +7,17 @@
 <table class="table table-striped mt-4">
   <thead class="thead-light">
     <tr>
-      <th scope="col">id</th>
-      <th scope="col" class="sort-by-title pointer">
+      <th class='align-middle' scope="col">id</th>
+      <th class='align-middle' scope="col" class="sort-by-title pointer">
         <%= t('.title') %>
         <%= octicon "arrow-up", class: "text-success hide" %>
         <%= octicon "arrow-down", class: "text-success hide" %>
       </th>
-      <th scope="col"><%= t('.category') %></th>
-      <th scope="col"><%= t('.public') %></th>
-      <th scope="col"><%= t('.level') %></th>
-      <th scope="col"><%= t('.questions') %></th>
-      <th colspan="3" scope="col"><%= t('.actions') %></th>
+      <th class='align-middle' scope="col"><%= t('.category') %></th>
+      <th class='align-middle' scope="col"><%= t('.public') %></th>
+      <th class='align-middle' scope="col"><%= t('.level') %><br><%= t('.time_for_test') %></th>
+      <th class='align-middle' scope="col"><%= t('.questions') %></th>
+      <th class='align-middle' colspan="3" scope="col"><%= t('.actions') %></th>
     </tr>
   </thead>
   <tbody>
